# oss-common-cicd-automation-pipeline

./: .gitignore  configure_spin_cli_config.sh  pylintrc  pyproject.toml
.spin/: config
DSL/: osscicdpipelinegenerator.groovy
DSL/DSL_Job_Generation/DSL/: OssCommonCicdDslJobGenerator.groovy
DSL/DSL_Job_Generation/Jenkinsfiles/: Jenkinsfile
DSL/commonclasses/: CommonAuthorization.groovy  CommonPipelineGenerationParameters.groovy  CommonSteps.groovy  CommonViewProperties.groovy
Jenkinsfiles/common_methods/: CommonMethods.groovy
Jenkinsfiles/spinnaker_pipeline_creation_flow/: Jenkinsfile
cicd_files/dsl/common_classes/: CommonParameters.groovy  CommonSteps.groovy  ExternalParameters.groovy
cicd_files/dsl/pipeline_jobs/: BuildAndPublish.groovy  PreCodeReview.groovy
cicd_files/dsl/pipeline_operations/: PipelineGenerator.groovy  PipelineUpdater.groovy
cicd_files/dsl/pipeline_views/: View.groovy
cicd_files/jenkins/files/pipeline_jobs/: BuildAndPublish.Jenkinsfile  PreCodeReview.Jenkinsfile
cicd_files/jenkins/files/pipeline_operations/: PipelineGenerator.Jenkinsfile  (+1 more)
cicd_files/jenkins/rulesets/: BuildAndPublish.yaml  PreCodeReview.yaml
cicd_files/jenkins/scripts/: bump_version.sh
python3_pre_code_review/: Dockerfile
spinnaker_pipeline_creation/: Dockerfile  Dockerfile-production  __main__.py  app_cli.py  e2e_pipeline_creation.py  pipeline_data.py
spinnaker_pipeline_creation/etc/: application.ini  request_retry.py  utils.py
spinnaker_pipeline_creation/tests/unit_tests/: test_e2e_pipeline_creation.py  test_request_retry.py  test_utils.py
(+5 files in other folders)
