[tool.poetry]
name = "spinnaker_pipeline_creation"
version = "0.0.1"
description = "Automating the creation of spinnaker pipelines"
authors = ["Thunderbee <PDLENMCOUN@pdl.internal.ericsson.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"
pylint = "*"
flake8 = "*"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s][%(filename)s:%(funcName)s:%(lineno)s][%(asctime)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
norecursedirs = "bob"